sidecar-envoy/deployment/envoy-manual/deployment-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-with-envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: hashicorp/http-echo # Example app
          args:
            - "-text=Hello Envoy"
          ports:
            - containerPort: 5678
        - name: envoy
          image: envoyproxy/envoy:v1.27.0
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy
          args:
            - "-c"
            - "/etc/envoy/envoy.yaml"
          ports:
            - containerPort: 10000
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-config
